frontend/src/components/gateway/manifests/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-secure-gwclass
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
